[package]
name = "asars"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env"] }
directories = "5.0.1"
keyring = { version = "=3.6.1", features = ["apple-native", "windows-native", "sync-secret-service" ] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
